--- a/examples/style.css
+++ b/examples/style.css
@@ -29,9 +29,19 @@
 }
 
 body, html {
+    display: flex;
+    flex-direction: column;
     margin: 0px;
     height: 100%;
     min-height: 100vh;
+}
+
+/* Header */
+
+header {
+    position: absolute;
+    padding: 16px;
+    box-sizing: border-box;
 }
 
 /* Main */
